--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lab-06-back-end",
   "version": "1.0.0",
-  "description": "",
+  "description": "city explorer",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
